worked on items and footer

--- a/Cakes/Cakes/Items.css
+++ b/Cakes/Cakes/Items.css
@@ -51,13 +51,73 @@ nav ul li a:hover{
 	  margin-top:12%;
 	  font-size:80px;
 }
-p{
-	margin: auto;
-	text-align:center;
-	 margin-top:6%;
-	 font-size:50px;
+.pa{
+	font-size: 15px;
+	
+}
+
+h2{
+	font-size:20px;
+
+}
+.h1{
+	margin-left: 9%;
+	margin-top: 2%;
+	font-size:50px;
+
+}
+img{
+	padding-top: 30px;
 }
 
 img{
-	padding-top: 30px;
+	margin-left: 10%;
+	margin-top: 5%;
+}
+
+.column {
+	width: 35%;
+	padding: 10px;
+	height: 300px; /* Should be removed. Only for demonstration */
+	margin-left:10%;
+  }
+  .column1{
+	width: 40%;
+	padding: 10px;
+	height: 300px; 
+	float:left;
+	margin-top:-20%;
+	margin-left:45% ;
+  }
+  
+  /* Clear floats after the columns */
+  .row:after {
+	content: "";
+	display: table;
+	clear: both;
+  }
+
+  footer {
+	
+	width: 100%;
+	min-height: 200px;
+	font-family: 'poppins', sans-sarif;
+	color: #FFFFFF;
+	font-size: 16px;
+	margin-top:20%;
+}
+
+.footer {
+	width: 100%;
+	padding: 30px 30px;
+	line-height: 2em;
+	background-color: rgb(0, 0, 0);
+	
+}
+
+.arrow{
+	height:100px;
+	width:100px;
+	vertical-align: top;
+	
 }
